--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <meta charset="utf-8">
+<meta name="referrer" content="no-referrer">
 
 <head>
     <title>PDF2Gyazo - PDFからGyazoに変換！</title>
@@ -65,6 +66,13 @@
         <div class="flow-text">
             <span>ローカルのjsで処理するので、サーバーにPDFファイルを送信しません。</span>
             <span>ブラウザのGyazoに保存されるので、自身以外の人が</span>
+        </div>
+        <div class="imgTable">
+            <!-- <div class="row">
+
+            </div> -->
+            <table id="imageTable">
+            </table>
         </div>
     </div>
 </body>
