--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <meta property="og:title" content="PDF2Gyazo - PDFからGyazoに変換！" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="PDF2Gyazoは、PDFからGyazoに変換するWebアプリケーションです。" />
-    <meta property="og:url" content="http://mojirage.com" />
+    <meta property="og:url" content="https://pdf2gyazo.azurewebsites.net/" />
     <meta property="og:site_name" content="PDF2Gyazo - PDFからGyazoに変換！" />
-    <meta property="og:image" content="http://mojirage.com/img/list.png" />
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
