--- a/index.html
+++ b/index.html
@@ -96,10 +96,13 @@
                     <p class="flow-text">ここにPDFを</p>
                     <p class="flow-text">ドラッグ&ドロップ</p>
                     <p class="flow-text">又はファイルを選択</p>
-                    <div class="file-field input-field" style="margin-left:45%">
+                    <div class="file-field input-field" style="width: 50%;left:25%;">
                         <div class="btn">
                             <span>File</span>
-                            <input id="files" type="file">
+                            <input id="files" type="file" accept=".pdf">
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text">
                         </div>
                     </div>
                 </div>
