--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <script src="./build/main.js"></script>
     <script src="./build/0.js"></script>
+    <script src="./build/pdf.worker.js"></script>
     <!-- <script src="./build/1.js"></script>
     <script src="./build/2.js"></script> -->
     <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
