--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </style>
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">PDF2Gyazo</a>
+            <a id="logo-container" href="./" class="brand-logo">PDF2Gyazo</a>
         </div>
     </nav>
 
