--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             </h3>
             <p>jsで処理するため、PDFファイルを送信しません。</p>
             <p>ブラウザのGyazoアカウントに保存されます。</p>
+            <p>右クリック/長押しで高画質でjpeg保存できます。</p>
         </div>
     </div>
     <footer class="page-footer light-blue lighten-1">
